manifests/core/cloudnative-pg/postgres-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
